View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026028 | Open CASCADE | OCCT:Visualization | public | 2015-04-07 16:17 | 2021-03-01 23:31 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0026028: Option for drawing MeshVS_Mesh as closed object | ||||
Description | Currently MeshVS_Mesh has no ability to draw it as closed object. It will be useful to add such option; this would allow enabling such features as backface culling and capping. | ||||
Steps To Reproduce | test bugs vis bug26028 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug26028 | ||||
|
Branch CR26028 has been created by dbv. SHA-1: 83445177c57bd42799920681bc0e2cbd13f73cd3 Detailed log of new commits: Author: dbv Date: Tue Apr 7 16:18:42 2015 +0300 Added flag for drawing MeshVS_Mesh as closed object |
|
Branch CR26028 has been updated forcibly by dbv. SHA-1: af7a6d65626c55d714aa37189ab3f51b54285020 |
|
Dear Kirill, please review patch in occt branch CR26028 |
|
Branch CR26028 has been updated forcibly by dbv. SHA-1: eb8bda2755c5d54b798c97bac6bbdc5a27b5cd17 |
|
Added need MeshVS_DA_ClosedGroup flag to MeshVS_DrawerAttribute enum for drawing MeshVS_Mesh as closed object. Dear Kirill, please review patch in occt branch CR26028 (http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=eb8bda2755c5d54b798c97bac6bbdc5a27b5cd17) |
|
+ Standard_Boolean anIsClosed = Standard_False; isClosed + aGroup->SetClosed (anIsClosed); ... aDrawer->GetBoolean ( MeshVS_DA_SupressBackFaces, isSupressBackFaces ... aCullFillAsp->SuppressBackFace();); I have doubts that we need new flag at all - there is MeshVS_DA_SupressBackFaces intended for similar purpose (usually closed flag and back-face culling are synchronized). However MeshVS_DA_SupressBackFaces is currently applied only for volumetric mesh, not polygonal - and this is incorrect. Thus this logic should be revised. |
|
Branch CR26028 has been updated forcibly by dbv. SHA-1: 85e59a9db49339748c6ed9e44e36fd6c424123a7 |
|
MeshVS_MeshPrsBuilder::DrawArrays now sets IsClosed flag to group according to MeshVS_DA_SupressBackFaces attribute in MeshVS_Drawer Dear Kirill, please review patch in occt branch CR26028 (http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=85e59a9db49339748c6ed9e44e36fd6c424123a7) |
|
Dear bugmaster, The branch CR26028 is reviewed. Please test. |
|
Branch CR26028 has been updated forcibly by mkv. SHA-1: 8703b1f2db013b88c20b65f6ab1d0cb783a9b932 |
|
Dear BugMaster, Branch CR26028 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR26028 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 8703b1f2db013b88c20b65f6ab1d0cb783a9b932 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR26028-master-occt-64/Debian60-64/bugs/vis/bug26028.html http://occt-tests/CR26028-master-occt-64/Windows-64-VC10/bugs/vis/bug26028.html bugs vis(004) bug26028: OK Testing on Linux: occt component : Total MEMORY difference: 95131349 / 94557310 [+0.61%] Total CPU difference: 53231.65999999958 / 52229.89999999946 [+1.92%] products component : Total MEMORY difference: 23713219 / 23666017 [+0.20%] Total CPU difference: 17502.13999999997 / 17773.759999999977 [-1.53%] Testing on Windows: occt component : Total MEMORY difference: 57152031 / 57163988 [-0.02%] Total CPU difference: 15992.489315298992 / 16283.181578699077 [-1.79%] products component : Total MEMORY difference: 15560492 / 15564896 [-0.03%] Total CPU difference: 6425.384788099971 / 6585.207812599981 [-2.43%] There are no differences in images found by testdiff. |
|
Branch CR26028 has been deleted by inv. SHA-1: 8703b1f2db013b88c20b65f6ab1d0cb783a9b932 |
occt: master c3715b74 2015-04-16 15:59:44
Committer: bugmaster Details Diff |
0026028: Option for drawing MeshVS_Mesh as closed object MeshVS_MeshPrsBuilder::DrawArrays now sets IsClosed flag to group according to MeshVS_DA_SupressBackFaces attribute in MeshVS_Drawer |
Affected Issues 0026028 |
|
mod - src/MeshVS/MeshVS_MeshPrsBuilder.cxx | Diff File | ||
mod - src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx | Diff File | ||
add - tests/bugs/vis/bug26028 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-07 16:17 |
|
New Issue | |
2015-04-07 16:17 |
|
Assigned To | => kgv |
2015-04-07 16:19 |
|
Assigned To | kgv => dbv |
2015-04-07 16:19 |
|
Status | new => assigned |
2015-04-07 16:20 | git | Note Added: 0039315 | |
2015-04-07 16:23 | git | Note Added: 0039316 | |
2015-04-07 16:24 |
|
Note Added: 0039318 | |
2015-04-07 16:24 |
|
Assigned To | dbv => kgv |
2015-04-07 16:24 |
|
Status | assigned => resolved |
2015-04-07 16:24 |
|
Steps to Reproduce Updated | |
2015-04-07 16:47 |
|
Description Updated | |
2015-04-07 17:18 |
|
Assigned To | kgv => dbv |
2015-04-07 17:18 |
|
Status | resolved => assigned |
2015-04-16 19:00 | git | Note Added: 0039916 | |
2015-04-16 19:02 |
|
Note Added: 0039917 | |
2015-04-16 19:02 |
|
Assigned To | dbv => kgv |
2015-04-16 19:02 |
|
Status | assigned => resolved |
2015-04-16 19:06 |
|
Target Version | => 6.9.0 |
2015-04-16 19:46 | kgv | Assigned To | kgv => san |
2015-04-17 08:35 | kgv | Note Added: 0039932 | |
2015-04-17 08:35 | kgv | Assigned To | san => dbv |
2015-04-17 08:35 | kgv | Status | resolved => assigned |
2015-04-17 08:36 | kgv | Note Edited: 0039932 | |
2015-04-17 15:42 | git | Note Added: 0039966 | |
2015-04-17 15:43 |
|
Note Added: 0039967 | |
2015-04-17 15:43 |
|
Assigned To | dbv => kgv |
2015-04-17 15:43 |
|
Status | assigned => resolved |
2015-04-17 16:04 | kgv | Assigned To | kgv => apl |
2015-04-17 19:36 |
|
Note Added: 0040009 | |
2015-04-17 19:36 |
|
Assigned To | apl => bugmaster |
2015-04-17 19:36 |
|
Status | resolved => reviewed |
2015-04-21 13:32 |
|
Assigned To | bugmaster => mkv |
2015-04-21 13:46 | git | Note Added: 0040073 | |
2015-04-22 16:46 |
|
Note Added: 0040110 | |
2015-04-22 16:46 |
|
Note Added: 0040111 | |
2015-04-22 16:46 |
|
Assigned To | mkv => bugmaster |
2015-04-22 16:46 |
|
Status | reviewed => tested |
2015-04-22 16:47 |
|
Test case number | => bugs vis(004) bug26028 |
2015-04-25 17:37 | bugmaster | Changeset attached | => occt master c3715b74 |
2015-04-25 17:37 | bugmaster | Status | tested => verified |
2015-04-25 17:37 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:30 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:34 | git | Note Added: 0041069 | |
2016-07-30 17:08 | kgv | Relationship added | related to 0027583 |
2021-03-01 23:31 | kgv | Relationship added | related to 0032188 |