src/MeshVS/MeshVS_MeshPrsBuilder.cxx
@@ -1060,6 +1060,13 @@ void MeshVS_MeshPrsBuilder::DrawArrays( const Handle(Prs3d_Presentation)& Prs,
 
   theFillAsp->Values( aStyle, anIntColor, aBackColor, anEdgeColor, aType, aWidth );
 
+  Standard_Boolean isSupressBackFaces = Standard_False;
+  Handle(MeshVS_Drawer) aDrawer = GetDrawer();
+  if (!aDrawer.IsNull())
+  {
+    aDrawer->GetBoolean (MeshVS_DA_SupressBackFaces, isSupressBackFaces);
+  }
+
   if ( IsPolygons && theFillAsp->FrontMaterial().Transparency()<0.01 )
   {
     Prs3d_Root::NewGroup ( Prs );
@@ -1075,26 +1082,21 @@ void MeshVS_MeshPrsBuilder::DrawArrays( const Handle(Prs3d_Presentation)& Prs,
     else
       theFillAsp->SetDistinguishOff();
 
+    aGroup->SetClosed (isSupressBackFaces);
+    Handle(Graphic3d_AspectFillArea3d) aFillAsp = new Graphic3d_AspectFillArea3d (*(theFillAsp.operator->()));
+    if (isSupressBackFaces)
+    {
+      aFillAsp->SuppressBackFace();
+    }
+    aGroup->SetPrimitivesAspect (aFillAsp);
+
     if( IsFacePolygons )
     {
-      aGroup->SetPrimitivesAspect ( theFillAsp );
       aGroup->AddPrimitiveArray ( thePolygons );
     }
 
     if( IsVolumePolygons )
     {
-      Handle( Graphic3d_AspectFillArea3d ) aCullFillAsp = 
-          new Graphic3d_AspectFillArea3d( *( theFillAsp.operator->() ) );
-
-      Standard_Boolean isSupressBackFaces = Standard_False;
-      Handle( MeshVS_Drawer ) aDrawer = GetDrawer();
-      if (!aDrawer.IsNull())
-        aDrawer->GetBoolean  ( MeshVS_DA_SupressBackFaces, isSupressBackFaces );
-
-      if (isSupressBackFaces)
-        aCullFillAsp->SuppressBackFace();
-
-      aGroup->SetPrimitivesAspect ( aCullFillAsp );
       aGroup->AddPrimitiveArray ( theVolumesInShad );
     }
   }
@@ -1145,26 +1147,21 @@ void MeshVS_MeshPrsBuilder::DrawArrays( const Handle(Prs3d_Presentation)& Prs,
     else
       theFillAsp->SetDistinguishOff();
 
+    aGroup->SetClosed (isSupressBackFaces);
+    Handle(Graphic3d_AspectFillArea3d) aFillAsp = new Graphic3d_AspectFillArea3d (*(theFillAsp.operator->()));
+    if (isSupressBackFaces)
+    {
+      aFillAsp->SuppressBackFace();
+    }
+    aGroup->SetPrimitivesAspect (aFillAsp);
+
     if( IsFacePolygons )
     {
-      aGroup->SetPrimitivesAspect ( theFillAsp );
       aGroup->AddPrimitiveArray ( thePolygons );
     }
 
     if( IsVolumePolygons )
     {
-      Handle( Graphic3d_AspectFillArea3d ) aCullFillAsp = 
-          new Graphic3d_AspectFillArea3d( *( theFillAsp.operator->() ) );
-
-      Standard_Boolean isSupressBackFaces = Standard_False;
-      Handle( MeshVS_Drawer ) aDrawer = GetDrawer();
-      if (!aDrawer.IsNull())
-        aDrawer->GetBoolean  ( MeshVS_DA_SupressBackFaces, isSupressBackFaces );
-
-      if (isSupressBackFaces)
-        aCullFillAsp->SuppressBackFace();
-
-      aGroup->SetPrimitivesAspect ( aCullFillAsp );
       aGroup->AddPrimitiveArray ( theVolumesInShad );
     }
   }
